<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_work_out"
    android:baselineAligned="true"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="120" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_usuario"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="120" >

        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_perfil" />

        <Button
            android:id="@+id/btn_exercicio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_exercicio" />

        <Button
            android:id="@+id/btn_rotina"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_rotina" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="120" >

        <Button
            android:id="@+id/btn_ficha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_ficha" />

        <Button
            android:id="@+id/btn_evolucao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_evolucao" />

        <Button
            android:id="@+id/btn_ajuda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_ajuda" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="100" >

        <Button
            android:id="@+id/btn_sobre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:onClick="onClick"
            android:text="@string/botao_sobre" />
    </LinearLayout>

</LinearLayout>