<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        
        android:weightSum="100" >

        <!-- Text view e Edit Text Login -->

        <TextView
            style="@style/textopequeno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/label_usuario" />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90" 
            android:maxLines="1"/>
        <!-- Text view e Edit Text Senha -->

        <TextView
            style="@style/textopequeno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/label_senha" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btn_login"
            style="@style/textopequenopreto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/botao_login" />

        <Button
            android:id="@+id/btn_novousuario"
            style="@style/textopequenopreto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/botao_novousuario" />
    </LinearLayout>

</LinearLayout>